{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "f14dd93b-c118-4f28-b6ec-ab58044b5e09",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Value",
                    "id": "8a954d10-ba2c-4655-b5f6-63e39c91d6b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Skill",
                    "type": "Value",
                    "id": "7f91599c-340c-457c-a1bd-3b20ccf47dc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "B1",
                    "type": "Button",
                    "id": "cae78edb-aab0-4ae4-8bbe-8b840269950f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B2",
                    "type": "Button",
                    "id": "a6263ae9-a12c-45e4-84d7-e5acd2af7d2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B3",
                    "type": "Button",
                    "id": "9906ff01-4995-4d42-aa1a-2bfddf6a8030",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "3f87480d-00d5-4717-9317-90396fedca9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93f81fcc-7969-4c20-9897-a52418251cf2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fa8ce57-8e09-4aaa-9241-3aab30d46d8a",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f824dec6-528e-4467-aaef-fe2c332d88a4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "B1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d484cae-0791-4d46-bb72-ba7302ae51e7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "B2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10342097-5f07-4732-9450-de913036a868",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "B3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "573510e2-abdf-4d39-b2e6-a1056ea9edfd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "33f65635-bd2f-4f63-9f08-8a4dc5d06054",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "9b3acbec-9723-43cd-a6db-25a9c0ce502b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InvenOnOff",
                    "type": "Button",
                    "id": "dc52e7b9-a2bf-4cb9-ae68-84d73d14de10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5a106fe-0762-471c-b7aa-df48db294edb",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e52de8d4-23e2-4358-be70-6fdcf0d11f69",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InvenOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "9d1a543f-310b-40d9-96dc-3f2e23510ccd",
            "actions": [
                {
                    "name": "Test_1",
                    "type": "Button",
                    "id": "6c3ac720-c362-4bf7-a96c-7946a2153592",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_2",
                    "type": "Button",
                    "id": "9ef614cf-deee-42a3-af9a-265a58165662",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_3",
                    "type": "Button",
                    "id": "a4aac425-dbc9-4a9c-809a-e4282f096568",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_4",
                    "type": "Button",
                    "id": "e58f567f-66e2-49a8-ae52-1c1d20e7b687",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test_5",
                    "type": "Button",
                    "id": "59e71882-66d9-4e6c-be80-2de8637b6766",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "318bc683-9050-47d4-9120-c9a25a46785d",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dab9f41-c81b-498b-8272-3640f04bb29a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23578f0b-ac3e-4264-accf-7f4328feb152",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b10b8368-6f3e-41f2-955f-8939ac68a9dd",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2ee293c-4b5b-435a-9e6a-643553c00f0c",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}